--- a/pom.xml
+++ b/pom.xml
@@ -113,6 +113,13 @@
             <version>0.1.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
+
+
+
         <!-- Redisson客户端依赖 -->
         <!--		<dependency>-->
         <!--			<groupId>org.redisson</groupId>-->
