--- a/pom.xml
+++ b/pom.xml
@@ -118,14 +118,28 @@
             <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+            <version>1.14.3</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.mashape.unirest</groupId>
+            <artifactId>unirest-java</artifactId>
+            <version>1.4.9</version>
+        </dependency>
+
+        <!--邮箱发送依赖-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+            <version>2.1.5.RELEASE</version>
+        </dependency>
 
 
-        <!-- Redisson客户端依赖 -->
-        <!--		<dependency>-->
-        <!--			<groupId>org.redisson</groupId>-->
-        <!--			<artifactId>redisson-spring-boot-starter</artifactId>-->
-        <!--			<version>3.15.4</version>-->
-        <!--		</dependency>-->
+
+
     </dependencies>
 
     <build>
